# pose3d-dataset-generator

./: CMakeLists.txt
shader/: bone.glsl
src/: animation.cpp  camera.h  main.cpp  pose3d.cpp  pose3d.h  shader.cpp  shader.h  window.cpp  window.h
